--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,25 @@
 /Scripts/
 /.gitignore
 /pyvenv.cfg
+/.
+/Lib/
+/lr7/
+/lr7/lr7/
+/lr7/lr7/__init__.py
+/lr7/lr7/asgi.py
+/lr7/lr7/settings.py
+/lr7/lr7/urls.py
+/lr7/lr7/wsgi.py
+/lr7/pages/
+/lr7/templates/
+/lr7/templates/registration/
+/lr7/templates/__init__.py
+/lr7/templates/base.html
+/lr7/templates/home.html
+/lr7/templates/signup.html
+/lr7/users/
+/lr7/db.sqlite3
+/lr7/manage.py
+/Scripts/
+/.gitignore
+/pyvenv.cfg
